LPS-149028 portal-impl: use ArrayUtils
https://issues.liferay.com/browse/LPS-149028